Vault: rebranding with a lot of fixes (#2)
* folder auth

* add requirements.txt

* update requirements.txt

* minor fix + use jwt instead of jose

* some fixes

* remove secret.py

* now head is repository-specific

* commit

* minor fix

* add comment

* add __eq__ to User

* now we use gunicorn

* fix of commits: now they require auth

* continuation of fix

* continuation of fix 2

* test of multiprocessing dict

* now multiprocessing queue

* less clutter

* now it is Vault
